k8s/simpleweb-deploy-service.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: simpleweb
  name: simpleweb
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simpleweb
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: simpleweb
    spec:
      containers:
      - env:
        - name: SPRING_PROFILES_ACTIVE
          value: dev
        image: maeddes/simpleweb:v0.1
        imagePullPolicy: IfNotPresent
        name: simpleweb
        ports:
        - containerPort: 8080
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simpleweb
  name: simpleweb-service
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: simpleweb
  type: LoadBalancer
