k8s/simpleweb-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simpleweb
  name: simpleweb-service
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: simpleweb
  type: LoadBalancer
