k8s/ingress-plain.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simpleweb
spec:
  rules:
  - host: kbv-development.eu-central.containers.mybluemix.net
    http:
      paths:
      - backend:
          serviceName: sw1
          servicePort: 8080
